--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,13 @@
 @import "tailwindcss";
+body{
+  display: flex;
+}
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
+  align-items: center;
+  text-align: center;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
