--- a/src/index.css
+++ b/src/index.css
@@ -21,11 +21,11 @@ body{
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #000000;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #535bff;
 }
 
 body {
